--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,7 +4,8 @@
             <nav class="navbar" role="navigation" aria-label="main navigation">
                 <div class="navbar-menu is-active buttons">
                     <button class="button is-link" [routerLink]="['']">Home</button>
-                    <button class="button is-link" *ngIf="isAuthenticated" [routerLink]="['/lotto']">Lotto Game</button>
+                    <button class="button is-link" *ngIf="isAuthenticated" [routerLink]="['/lotto']">Play</button>
+                    <button class="button is-link" *ngIf="isAuthenticated" [routerLink]="['/lotto']">Export</button>
                     <button class="button is-link" *ngIf="!isAuthenticated" (click)="login()"> Login </button>
                     <button class="button is-link" *ngIf="isAuthenticated" (click)="logout()"> Logout </button>
                 </div>
